# corridor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/key_model/: door_keys.mtl
src/: audio_manager.cpp  audio_manager.h  camera.cpp  camera.h  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h  shader_sources.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
